fixed mobile horizontal scrolling issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,14 @@
 
 /* Default stylesheet */
 
+html, body {
+    overflow-x: hidden;
+}
+
+body {
+    position: relative
+}
+
 .navbar {
     width: 100%;
 }
